# RocketLauncher

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: config.rs  gamepad.rs  lib.rs  updater.rs
rocket-launcher/: Cargo.toml
rocket-launcher/src/: cli.rs
src/: auth.rs  config.rs  discovery.rs  gamepad.rs  launch.rs  lib.rs  main.rs
ui/src/: app.rs  main.rs  types.rs  view.rs  worker.rs
ui/src/view/: account.rs  launch.rs  settings.rs  widgets.rs
