[package]
name = "rocket-launcher"
version = "0.1.0"
edition = "2024"

[lib]
name = "rocket_launcher"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
